--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ group 'com.arun'
 //version '1.0'
 
 repositories {
-    maven { url 'https://www.nexus.ford.com/repository/external-proxy-group' }
-    maven { url 'https://www.nexus.ford.com/repository/public' }
+
+   mavenRepository()
 }
 
 dependencies {
